Add audio weights + updates

--- a/audio/conv2d.ipynb
+++ b/audio/conv2d.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 210,
    "id": "4c090374-88e6-49e8-b0f2-0d04b6de057e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 211,
    "id": "6b132515-7d8e-4497-9e42-f4af0b080fa0",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 212,
    "id": "b955358b-9b63-403e-a343-eb970df08e28",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 213,
    "id": "343c7e70-f0fa-43b1-adac-8d3671246e06",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "        [0.09470174]], dtype=float32)>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 214,
    "id": "9fecf877-9c53-46aa-9488-6ae720bcf962",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 215,
    "id": "007ee942-f808-4efa-b574-6a44d9e2b43c",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "        [0.53528124]]], dtype=float32)>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,27 +210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 218,
    "id": "187b5ee3-21e4-4e3f-b46a-8461a65344b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[-0.15976997],\n",
-       "        [-0.13272853],\n",
-       "        [-0.04565387]],\n",
-       "\n",
-       "       [[-0.16104017],\n",
-       "        [-0.14440563],\n",
-       "        [-0.10488112]],\n",
-       "\n",
-       "       [[-0.15947178],\n",
-       "        [-0.10749058],\n",
-       "        [ 0.5363273 ]]], dtype=float32)"
+       "(TensorShape([1, 32, 32, 1]),\n",
+       " array([[[-0.15976997],\n",
+       "         [-0.13272853],\n",
+       "         [-0.04565387]],\n",
+       " \n",
+       "        [[-0.16104017],\n",
+       "         [-0.14440563],\n",
+       "         [-0.10488112]],\n",
+       " \n",
+       "        [[-0.15947178],\n",
+       "         [-0.10749058],\n",
+       "         [ 0.5363273 ]]], dtype=float32))"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +241,7 @@
     "l2 = h5_model.layers[1]\n",
     "l2_out = l2(l1_out.numpy())\n",
     "l2_out_1 = l2_out[0,0:3,0:3,:].numpy()\n",
-    "l2_out_1"
+    "l2_out.shape, l2_out_1"
    ]
   },
   {
@@ -261,32 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "c82f4d93-755d-4c62-878c-3ed804b9d73e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[[ 0.23206365],\n",
-       "         [ 0.0625558 ],\n",
-       "         [-0.01330692]],\n",
-       " \n",
-       "        [[ 0.01292816],\n",
-       "         [ 0.19025595],\n",
-       "         [-0.04498325]],\n",
-       " \n",
-       "        [[-0.30813888],\n",
-       "         [-0.15491289],\n",
-       "         [ 0.21284764]]], dtype=float32),\n",
-       " 0.05159658)"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "l3 = h5_model.layers[2]\n",
     "filter_1 = l3.weights[0].numpy()[:,:,:,0]\n",
@@ -304,36 +283,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "id": "c88aca10-59ef-4296-b338-149222fe7136",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time elapsed: 0:00:00.001852\n",
-      "(1, 30, 30, 32)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(32,), dtype=float32, numpy=\n",
-       "array([0.16193339, 0.05731045, 0.        , 0.        , 0.        ,\n",
-       "       0.07186232, 0.01496371, 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.12110282, 0.07639576, 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.08606026, 0.        ,\n",
-       "       0.08105926, 0.13700518, 0.        , 0.        , 0.        ,\n",
-       "       0.01572211, 0.00423875, 0.        , 0.08994323, 0.        ,\n",
-       "       0.07543847, 0.        ], dtype=float32)>"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# run the tf conv2d layer and print the channel values for the first entry\n",
     "t = datetime.now()\n",
@@ -354,21 +307,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "ee2975d4-f9b4-4515-9775-6befec6063c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16193339"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate the first value\n",
     "np.sum(l2_out_1 * filter_1) + bias_1"
@@ -384,27 +326,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "74d49fd7-04e2-40b9-bc96-15f5f44d7e36",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.16193339, 0.05731045, 0.        , 0.        , 0.        ,\n",
-       "       0.07186231, 0.01496371, 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.12110282, 0.07639575, 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.08606026, 0.        ,\n",
-       "       0.08105926, 0.13700518, 0.        , 0.        , 0.        ,\n",
-       "       0.01572211, 0.00423876, 0.        , 0.08994324, 0.        ,\n",
-       "       0.07543847, 0.        ])"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate the channel values for the first entry\n",
     "channels = l3.weights[0].numpy().shape[-1]\n",
@@ -426,13 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
-   "id": "1e4cc356-3764-47cf-81f0-5aa3297422fd",
+   "execution_count": 242,
+   "id": "ec268a83-92ba-4972-aea8-f0a33dd6c155",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# expects a 4 dimensional input (groups, rows, cols, 1)\n",
-    "# and filters (rows, cols, 1, channels)\n",
+    "# expects a 4 dimensional input (groups, rows, cols, channels)\n",
+    "# and filters (rows, cols, in_channels, out_channels)\n",
     "# biases is 1 dimensional matching the number of channels or None\n",
     "def conv2d(input, filters, biases):\n",
     "    output_shape = list(input.shape)\n",
@@ -449,12 +374,15 @@
     "    output = np.zeros(output_shape)\n",
     "\n",
     "    groups = input.shape[0]\n",
-    "    rows = input.shape[1]\n",
-    "    cols = input.shape[2]\n",
+    "    #rows = input.shape[1]\n",
+    "    #cols = input.shape[2]\n",
     "\n",
+    "    debug = True\n",
     "    for g in range(groups):\n",
-    "        for r in range(rows - window_row_size + 1):  # skip unpadded edges\n",
-    "            for c in range(cols - window_col_size + 1):  # skip unpadded edges\n",
+    "        #for r in range(rows - window_row_size + 1):  # skip unpadded edges\n",
+    "        #    for c in range(cols - window_col_size + 1):  # skip unpadded edges\n",
+    "        for r in range(output_shape[1]):  # skip unpadded edges\n",
+    "            for c in range(output_shape[2]):  # skip unpadded edges\n",
     "\n",
     "                input_window = input[g, r:r+window_row_size, c:c+window_col_size, :]\n",
     "\n",
@@ -465,11 +393,12 @@
     "                    except:\n",
     "                        bias = 0.0\n",
     "\n",
+    "                    if debug:\n",
+    "                        print('in shape: %s, filter: %s' % (input_window.shape, filter.shape))\n",
+    "                        debug = False\n",
     "                    val = relu(\n",
-    "                        np.sum(\n",
-    "                            input_window \\\n",
-    "                            * filter)\n",
-    "                        + bias)\n",
+    "                        np.sum(input_window * filter) + bias\n",
+    "                    )\n",
     "\n",
     "                    output[g,r,c,ch] = val\n",
     "\n",
@@ -486,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 243,
    "id": "2af55df3-7ed6-4924-8dbe-06fc11550e01",
    "metadata": {},
    "outputs": [
@@ -494,7 +423,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0:00:00.598863\n",
+      "input shape: (1, 32, 32, 1)\n",
+      "weights shape: (3, 3, 1, 32)\n",
+      "\n",
+      "in shape: (3, 3, 1), filter: (3, 3, 1)\n",
+      "Time elapsed: 0:00:00.608931\n",
       "(1, 30, 30, 32)\n"
      ]
     },
@@ -510,12 +443,15 @@
        "       0.07543847, 0.        ])"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print('input shape: %s' % str(l2_out.numpy().shape))\n",
+    "print('weights shape: %s\\n' % str(l3.weights[0].numpy().shape))\n",
+    "\n",
     "t = datetime.now()\n",
     "myl3out = conv2d(l2_out.numpy(), l3.weights[0].numpy(), l3.weights[1].numpy())\n",
     "dt = datetime.now() - t\n",
@@ -526,24 +462,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 250,
    "id": "98a71fce-b6ee-45b1-b541-dc7ab07e7950",
    "metadata": {},
    "outputs": [],
    "source": [
     "# verify values\n",
-    "def verify_conv2d(out1, out2, tolerance=1e-5):\n",
-    "    shapes_equal = out1.shape == out2.shape\n",
+    "def verify_arrays(a1, a2, tolerance=1e-5):\n",
+    "    shapes_equal = a1.shape == a2.shape\n",
     "    print('Shapes match: %s' % str(shapes_equal))\n",
     "    if not shapes_equal:\n",
     "        return\n",
     "\n",
-    "    print('Values match: %s' % str(np.all(l3_out - myl3out < tolerance)))"
+    "    print('Values match: %s' % str(np.all(a1 - a2 < tolerance)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 251,
    "id": "c91ed75c-613f-4893-9853-759f74c95b33",
    "metadata": {},
    "outputs": [
@@ -557,7 +493,7 @@
     }
    ],
    "source": [
-    "verify_conv2d(l3_out.numpy(), myl3out)"
+    "verify_arrays(l3_out.numpy(), myl3out)"
    ]
   },
   {
@@ -578,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 246,
    "id": "bc09f21f-07b1-4fda-8559-fa8408511918",
    "metadata": {},
    "outputs": [
@@ -586,7 +522,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0:00:00.007967\n",
+      "Time elapsed: 0:00:00.007571\n",
       "(1, 28, 28, 64)\n"
      ]
     },
@@ -609,7 +545,7 @@
        "       0.        , 0.        , 0.        , 0.00255454], dtype=float32)>"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 247,
    "id": "667b3864-ccfe-4dd0-8536-fc426c38a3d8",
    "metadata": {},
    "outputs": [
@@ -642,7 +578,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0:00:01.096347\n",
+      "input shape: (1, 30, 30, 32)\n",
+      "weights shape: (3, 3, 32, 64)\n",
+      "\n",
+      "in shape: (3, 3, 32), filter: (3, 3, 32)\n",
+      "Time elapsed: 0:00:01.091430\n",
       "(1, 28, 28, 64)\n"
      ]
     },
@@ -664,12 +604,15 @@
        "       0.        , 0.        , 0.        , 0.00255456])"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print('input shape: %s' % str(l3_out.numpy().shape))\n",
+    "print('weights shape: %s\\n' % str(l4.weights[0].numpy().shape))\n",
+    "\n",
     "t = datetime.now()\n",
     "myl4out = conv2d(myl3out, l4.weights[0].numpy(), l4.weights[1].numpy())\n",
     "dt = datetime.now() - t\n",
@@ -680,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 252,
    "id": "3444bbe0-e7c1-4518-808a-a0cf1aa6c315",
    "metadata": {},
    "outputs": [
@@ -694,7 +637,7 @@
     }
    ],
    "source": [
-    "verify_conv2d(l4_out.numpy(), myl4out)"
+    "verify_arrays(l4_out.numpy(), myl4out)"
    ]
   },
   {
