--- a/audio/resizing_normalization.ipynb
+++ b/audio/resizing_normalization.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "078af610-e416-498b-9afe-5dad9dd2078e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "6229b6c3-1970-434f-b22f-1d1fa0b82220",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "502936fe-e22c-4c53-9e23-4af9df24c660",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "48c928d6-ee63-4803-aed3-921ca8e85291",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "        [0.09470174]], dtype=float32)>)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "id": "34b59714-c327-44cd-a908-553cd3baa6d6",
    "metadata": {},
    "outputs": [
@@ -170,26 +170,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "id": "3c25c8f0-ed33-4c8f-a966-757f3657b665",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<keras.layers.preprocessing.image_preprocessing.Resizing at 0x12f2d17d0>,\n",
-       " <keras.layers.preprocessing.normalization.Normalization at 0x12d6b8f10>,\n",
-       " <keras.layers.convolutional.conv2d.Conv2D at 0x1306123d0>,\n",
-       " <keras.layers.convolutional.conv2d.Conv2D at 0x12dc24490>,\n",
-       " <keras.layers.pooling.max_pooling2d.MaxPooling2D at 0x1306c4690>,\n",
-       " <keras.layers.regularization.dropout.Dropout at 0x1307a2ad0>,\n",
-       " <keras.layers.reshaping.flatten.Flatten at 0x13076af90>,\n",
-       " <keras.layers.core.dense.Dense at 0x1306724d0>,\n",
-       " <keras.layers.regularization.dropout.Dropout at 0x130765c50>,\n",
-       " <keras.layers.core.dense.Dense at 0x12e40f350>]"
+       "[<keras.layers.preprocessing.image_preprocessing.Resizing at 0x10b38bc90>,\n",
+       " <keras.layers.preprocessing.normalization.Normalization at 0x12d0d7690>,\n",
+       " <keras.layers.convolutional.conv2d.Conv2D at 0x12d5d7090>,\n",
+       " <keras.layers.convolutional.conv2d.Conv2D at 0x12d524250>,\n",
+       " <keras.layers.pooling.max_pooling2d.MaxPooling2D at 0x12d591250>,\n",
+       " <keras.layers.regularization.dropout.Dropout at 0x12d6bf790>,\n",
+       " <keras.layers.reshaping.flatten.Flatten at 0x12d6bec50>,\n",
+       " <keras.layers.core.dense.Dense at 0x12d6bd2d0>,\n",
+       " <keras.layers.regularization.dropout.Dropout at 0x12d6c3ed0>,\n",
+       " <keras.layers.core.dense.Dense at 0x12d6c38d0>]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,17 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "ee54144b-bc75-4526-aa78-63ffaf5c1979",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<KerasTensor: shape=(None, 1, 124, 129, 1) dtype=float32 (created by layer 'input_1')>"
+       "<KerasTensor: shape=(None, 1, 124, 129, 1) dtype=float32 (created by layer 'input_2')>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "id": "8dccd255-e8cc-450a-8ca0-75b4e2ca760e",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "id": "c2c4b40a-1bc6-445d-9b37-c999ec211d8f",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "id": "07ef1295-6dfd-4924-901f-a11480f631f3",
    "metadata": {},
    "outputs": [],
@@ -330,16 +330,54 @@
     "                                    input_data[b, y1, x1, c] * (input_y - y0) * (input_x - x0) + \\\n",
     "                                    rounding_offset\n",
     "                    output_data[b, y, x, c] = interpolation\n",
+    "                    #if y == 0 and x < 10: print('Interp %f %d %d, %f %d %d' % (input_y, y0, y1, input_x, x0, x1))\n",
     "\n",
     "    return np.array(output_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
+   "id": "7dd2e36a-6caf-477f-9b97-53b026b1487f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 124, 129, 1)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "1cd430fe-bab7-4916-abbf-68686931a69b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interp 1.437500 1 2, 1.515625 1 2\n",
+      "Interp 1.437500 1 2, 5.546875 5 6\n",
+      "Interp 1.437500 1 2, 9.578125 9 10\n",
+      "Interp 1.437500 1 2, 13.609375 13 14\n",
+      "Interp 1.437500 1 2, 17.640625 17 18\n",
+      "Interp 1.437500 1 2, 21.671875 21 22\n",
+      "Interp 1.437500 1 2, 25.703125 25 26\n",
+      "Interp 1.437500 1 2, 29.734375 29 30\n",
+      "Interp 1.437500 1 2, 33.765625 33 34\n",
+      "Interp 1.437500 1 2, 37.796875 37 38\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -355,7 +393,7 @@
        "       [0.02978715]], dtype=float32)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "id": "0d2a6e8a-04b4-4531-bfec-d587052d5fbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +426,7 @@
        "       [0.02978715]], dtype=float32)>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 31,
    "id": "5bf868c5-de4e-40a6-8209-ed59bb67242d",
    "metadata": {},
    "outputs": [
@@ -420,7 +458,7 @@
        " 102374400)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 32,
    "id": "d4c22b32-9942-4256-8b14-8bd4f54544ae",
    "metadata": {},
    "outputs": [
@@ -441,7 +479,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "id": "f9835d29-92c2-438c-aa00-8f22f6e0c71f",
    "metadata": {},
    "outputs": [
@@ -473,7 +511,7 @@
        "       [-0.12512411]], dtype=float32)>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 34,
    "id": "3a5889eb-f121-4e1f-8383-262e581ec9c4",
    "metadata": {},
    "outputs": [
@@ -502,7 +540,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 35,
    "id": "2932a811-6ff2-4d72-9a4a-ff856159f6c4",
    "metadata": {},
    "outputs": [
@@ -538,7 +576,7 @@
        "       [-0.12512411]], dtype=float32)>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 37,
    "id": "128196d6-8c44-48f5-99de-770174fa83ce",
    "metadata": {},
    "outputs": [
@@ -576,7 +614,7 @@
        "       [-0.12512411]], dtype=float32)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
